<resources>
    <string name="app_name">Flora</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="Email">Podaj e-mail</string>
    <string name="Password">Hasło</string>
    <string name="click_to_register">Zarejestruj sie</string>
    <string name="logout">Wyloguj</string>
    <string name="podaj_nazwe_uzytkownika">Podaj nazwe uzytkownika</string>
    <string name="o_aplikacji">O aplikacji</string>
    <string name="nauka_tekst1">\t\tZrozumienie warunków panujących w Twoim ogrodzie to kluczowy krok w osiągnięciu sukcesu w uprawie roślin. Oto kilka ważnych czynników do rozważenia:</string>
    <string name="nauka_tekst1_1">
        \n\t\t<b>Typ i skład gleby</b>: Zbadaj, czy Twoja gleba jest żyzna czy uboga w składniki pokarmowe. To pomoże Ci dobrać odpowiednie rośliny, które będą trwałe i zdrowe.
        </string>
    <string name="nauka_tekst1_2">
        \n\t\t<b>Ekspozycja ogrodu</b>: Określ, czy Twoje rabaty są silnie nasłonecznione, czy też bardziej zacienione i wietrzne.
        Ten czynnik wpłynie na wybór roślin, ponieważ niektóre gatunki lepiej rosną w słońcu, podczas gdy inne preferują cień.
        </string>
    <string name="nauka_tekst1_3">
        \n\t\t<b>Wybór odmian roślin</b>: Na podstawie analizy warunków glebowych i ekspozycji ogrodu, dobierz odmiany roślin, które najlepiej będą trwać w tych warunkach.
        Dostosuj się do ich potrzeb, aby zapewnić im optymalne warunki wzrostu.
        </string>
    <string name="nauka_tekst1_4">
        \n\t\t<b>Regularna pielęgnacja</b>: Po wyborze odpowiednich roślin, pamiętaj o regularnej pielęgnacji ogrodu, takiej jak podlewanie, nawożenie i usuwanie chwastów.
        To pomoże Twoim roślinom rosnąć zdrowo i pięknie.
        </string>
    <string name="nauka_tekst2">\t\tDobrze zaplanowane rozmieszczenie roślin wymaga dokładnego sporządzenia schematu nasadzeń oraz przemyślanego zaaranżowania otoczenia domu.
        Kwiatowe grządki z reguły umieszcza się po stronie przodu posesji, choć nie jest to jedyny możliwy punkt do posadzenia roślin.</string>
    <string name="nauka_tekst2_1">
    \n\t Bardzo efektownie prezentują się również kwietne obszary za budynkiem czy pnące się róże przy kratach obok bocznych ścian domu lub altan.
        W projektowaniu ogrodu warto rozważyć podział na różne sekcje.
        Ważne przy wyborze i sadzeniu kwiatów jest to, jakie mają wymagania dotyczące ilości wody i nasłonecznienia, jak się rozwijają pod względem wielkości i szerokości,
        jakie posiadają barwy czy terminy kwitnienia.
        \n\tNiektóre gatunki nie lubią towarzystwa innych roślin, co także trzeba uwzględnić.
        Duże rośliny nie powinny rzucać cienia na mniejsze. Jeśli posiadają rozbudowany system korzeniowy, mogą wchłaniać składniki pokarmowe ziemii, co wpłynie na ich sąsiadów.
        Podobnie jest z wodą. Rozsądnie jest ustawić najwyższe rośliny z tyłu, a niższe z przodu, aby uniknąć ich zacieniania się nawzajem. meblobranie</string>
    <string name="nauka_tekst3_1">
    \n\t <b>⬤ Rośliny wieloletnie:</b> Sadzone od wczesnej wiosny do września.
        Do tej grupy należą kwiaty cebulowe, takie jak tulipany, sasanki, krokusy, pierwiosnki i szafirki, oraz byliny,
        jak rumian i kocimiętka, a także astry i rozchodniki kwitnące jesienią.</string>
    <string name="nauka_tekst3_2">
    \n\t <b>⬤ Rośliny jednoroczne:</b> Sadzone wczesną wiosną, ich nasiona są odporne na mróz. Mogą odradzać się w kolejnym sezonie lub kwitnąć tylko latem.
        Sadzenie możliwe w skrzynkach, donicach lub bezpośrednio w gruncie. Najlepiej rosną na stanowiskach nasłonecznionych.
        Popularne jednoroczne to szałwia, aster, niecierpek, lwia paszcza, begonia i aksamitka.</string>
    <string name="nauka_tekst4_1">
    \n\t Najlepiej wysiewać rośliny jednoroczne do doniczek, co umożliwia kontrolę warunków wzrostu i unikanie przemarzania.
        Przenieś je do gruntu pod koniec maja. Przy przesadzaniu użyj odpowiednio przygotowanej gleby.
        Umieść sadzonki w oczyszczonym, spulchnionym i nawiezionym dołku, zasyp korzenie i podlej.</string>
    <string name="dlaczego_ta_aplikacja_jest_wa_na"><u>Dlaczego ta aplikacja jest ważna?</u></string>
    <string name="aplikacja_stworzona_przez"><u>Aplikacja stworzona przez:</u></string>
    <string name="_20_s_ow"><![CDATA[< 20 słow]]></string>


    <!-- Strings related to login -->

</resources>