<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NaukaActivity"
    android:background="@color/bgdark">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bgdark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/nauka_return_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:background="@drawable/return_icon" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jak idealnie sadzić kwiaty"
                android:textSize="24sp"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="5dp"
                android:background="@color/purplemagnolia" />



            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="50dp"
                android:layout_gravity="center"
                android:background="@color/bgdark"
                app:cardElevation="8dp">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ogrodekgif"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rozpoznaj warunki swojego ogrodu"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-black"
                android:textAlignment="textStart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nauka_tekst1"
                android:textSize="16sp"
                android:maxEms="15"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textAlignment="textStart"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nauka_tekst1_2"
                android:textSize="16sp"
                android:maxEms="15"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nauka_tekst1_3"
                android:textSize="16sp"
                android:maxEms="15"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nauka_tekst1_4"
                android:textSize="16sp"
                android:maxEms="15"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/nauka_wave1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/grayish">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dokonaj analizy miejsca"
                    android:textSize="22sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="textStart"
                    />

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="12dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nauka_ogrod"
                    app:shapeAppearanceOverlay="@style/RoundedSquare"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nauka_tekst2"
                    android:textSize="16sp"
                    android:maxEms="15"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textAlignment="textStart"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nauka_tekst2_1"
                    android:textSize="16sp"
                    android:maxEms="15"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textAlignment="center"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/nauka_wave2" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Przygotowanie do sadzenia"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-black"
                android:textAlignment="textStart"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitCenter"
                android:elevation="8dp"
                android:src="@drawable/nauka_sadzenie"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nauka_tekst3_1"
                android:textSize="16sp"
                android:maxEms="15"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nauka_tekst3_2"
                android:textSize="16sp"
                android:maxEms="15"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Zasady"
                android:textSize="22sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="sans-serif-black"
                android:textAlignment="textStart"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nauka_tekst4_1"
                android:textSize="16sp"
                android:maxEms="15"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/nauka_magnolia"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>